# opengl-cg

./: .gitignore  README.md
Taller 1 - Intro/: CMakeLists.txt  ej1.cpp  ej2.cpp  ej3.cpp  main.cpp  taller.h
Taller 2 - Primitivas Graficas/: .gitignore  CMakeLists.txt  main.cpp
Taller 2 - Primitivas Graficas/circunferencia/: algoritmos_circunferencia.cpp  ejercicio131.cpp  ejercicio132.cpp  ejercicio133.cpp
Taller 2 - Primitivas Graficas/headerFiles/: algcircun.h  algrecta.h  algs.h  ej132.h  ej133.h  taller.h
Taller 2 - Primitivas Graficas/recta/: algoritmos_recta.cpp  ejercicio71.cpp  ejercicio72.cpp  ejercicio73.cpp
